updated .content-header to prevent horizontal scrolling

--- a/static/css/page-layouts/content-header.css
+++ b/static/css/page-layouts/content-header.css
@@ -10,7 +10,7 @@
     align-items: center;
     flex-shrink: 1;
     justify-content: space-between;
-    width: calc(100vw - 225px);
+    width: calc(100vw - 260px);
 }
 
 .search-icon {
